--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+JS-XMLRPC version 0.4 - 2009/09/05
+
+I'm pleased to announce the fourth release of the js-xmlrpc library.
+
+A lot of bugs have been fixed since version 0.3, in many areas of encoding and
+decoding xmlrpc values.
+
+* added method setUserCredentials to xmlrpc_client, as the 'parent' php lib does in its latest version
+* added support for the <ex:nil/> tag from the apache library, both in input and output (output regulated by the xmlrpc_null_apache_encoding variable, input by thexmlrpc_null_extension one)
+* base64_decode now trims whitespace
+* updated bundled yui to version 2.5.0
+* fixed a bug in error log handler when using firefox+firebug
+* fixed a bug in xmlrpc_decode with structs 
+* fixed a bug in parsing cookie headers in http responses
+* allow lib to work in Windows Scripting Host environments 
+* added two demo files, for WSH and VB
+ 
 JS-XMLRPC version 0.3 - 2007/06/26
 
 I'm pleased to announce the third release of the js-xmlrpc library.
