--- a/NEWS
+++ b/NEWS
@@ -10,11 +10,11 @@ decoding xmlrpc values.
 * base64_decode now trims whitespace
 * updated bundled yui to version 2.5.0
 * fixed a bug in error log handler when using firefox+firebug
-* fixed a bug in xmlrpc_decode with structs 
+* fixed a bug in xmlrpc_decode with structs
 * fixed a bug in parsing cookie headers in http responses
-* allow lib to work in Windows Scripting Host environments 
+* allow lib to work in Windows Scripting Host environments
 * added two demo files, for WSH and VB
- 
+
 JS-XMLRPC version 0.3 - 2007/06/26
 
 I'm pleased to announce the third release of the js-xmlrpc library.
@@ -45,7 +45,7 @@ The big improvements are:
 
 Although there are no known bugs, a complete testsuite has not yet been developed
 to insure formal correctness. Please consider the code beta quality, and report
-any bugs you find to http://sourceforge.net/projects/phpxmlrpc
+any bugs you find to https://github.com/gggeek/jsxmlrpc
 
 
 
